--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 logging.level.org.springframework=info
 
 spring.messages.basename=messages
+
+management.endpoints.web.exposure.include=*
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.data.jpa.repositories.bootstrap-mode=default
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
