--- a/currency-conversion/src/main/resources/application.properties
+++ b/currency-conversion/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=currency-conversion
 
 # local config
 spring.profiles.active=dev
+server.port=8100
 
 # cloud config
 spring.config.import=optional:configserver:http://localhost:8888
