--- a/currency-exchange/src/main/resources/application.properties
+++ b/currency-exchange/src/main/resources/application.properties
@@ -12,3 +12,17 @@ server.port=8000
 # cloud config
 spring.config.import=optional:configserver:http://localhost:8888
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# retry config
+resilience4j.retry.instances.sample-api.max-attempts=5
+resilience4j.retry.instances.sample-api.wait-duration=1s
+resilience4j.retry.instances.sample-api.enable-exponential-backoff=true
+
+# circuit breaker config
+
+# rate limiter config
+resilience4j.ratelimiter.instances.default.limit-for-period=2
+resilience4j.ratelimiter.instances.default.limit-refresh-period=10s
+
+# bulkheads config
+
