--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -4,3 +4,7 @@ server.port=8765
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 spring.sleuth.sampler.probability=1.0
+
+# zipkin config
+spring.zipkin.base-url=http://localhost:9411
+spring.zipkin.sender.type=kafka
