--- a/currency-conversion/src/main/resources/application.properties
+++ b/currency-conversion/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.config.import=optional:configserver:http://localhost:8888
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 spring.sleuth.sampler.probability=1.0
+
+# zipkin config
+spring.zipkin.base-url=http://localhost:9411
+spring.zipkin.sender.type=kafka
