--- a/currency-exchange/src/main/resources/application.properties
+++ b/currency-exchange/src/main/resources/application.properties
@@ -28,3 +28,7 @@ resilience4j.ratelimiter.instances.default.limit-refresh-period=10s
 
 # sleuth config
 spring.sleuth.sampler.probability=1.0
+
+# zipkin config
+spring.zipkin.base-url=http://localhost:9411
+spring.zipkin.sender.type=kafka
