--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,36 @@ services:
     - "8761:8761"
     networks:
       - currency-network
+  zookeeper:
+    image: bitnami/zookeeper:0.0.1
+    ports:
+    - "2181:2181"
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+  kafka:
+    image: bitnami/kafka:0.0.1
+    ports:
+    - "9092:9092"
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    depends_on:
+      - zookeeper
+  zipkin:
+    image: openzipkin/zipkin:2.23
+    mem_limit: 700m
+    environment:
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092/
+    ports:
+      - "9411:9411"
+    networks:
+      - currency-network
+    depends_on:
+      - zookeeper
+      - kafka
   api-gateway:
     image: breader/api-gateway:0.0.1
     mem_limit: 700m
@@ -16,7 +46,13 @@ services:
     networks:
       - currency-network
     depends_on:
+      - zookeeper
+      - kafka
       - naming-server
+    environment:
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka/
+      SPRING.ZIPKIN.BASEURL: http://zipkin:9411/
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092/
   currency-exchange:
     image: breader/currency-exchange:0.0.1
     mem_limit: 700m
@@ -25,10 +61,14 @@ services:
     networks:
       - currency-network
     depends_on:
+      - zookeeper
+      - kafka
       - naming-server
       - api-gateway
     environment:
-      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka/
+      SPRING.ZIPKIN.BASEURL: http://zipkin:9411/
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092/
   currency-conversion:
     image: breader/currency-conversion:0.0.1
     mem_limit: 700m
@@ -37,12 +77,17 @@ services:
     networks:
       - currency-network
     depends_on:
+      - zookeeper
+      - kafka
       - naming-server
       - api-gateway
       - currency-exchange
     environment:
       EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+      SPRING.ZIPKIN.BASEURL: http://zipkin:9411/
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092/
 
 networks:
   currency-network:
+    driver: bridge
 
